@@ -9,7 +9,7 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableSwagger2
@@ -28,7 +28,7 @@ public class SwaggerConfig {
                 "",
                 contact,
                 "",
-                "", Arrays.asList());
+                "", List.of());
 
         return new Docket(DocumentationType.OAS_30)
                 .apiInfo(apiInfo)
